updates dependencies
